Fix issue: Ensure spinners are aligned and load properly #130

--- a/app/admin-page/styles.scss
+++ b/app/admin-page/styles.scss
@@ -24,19 +24,7 @@
 	height: 100%;
 }
 
-.flare-loader-spin {
-	display: block;
-	color: var(--wp-admin-theme-color-darker-20);
-	font-size: 10em;
-	line-height: 1;
-	margin: 3rem;
-	animation-name: spin;
-	animation-duration: 5000ms;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
-}
-
-@keyframes spin {
+@keyframes flare-spin {
 
 	from {
 		transform: rotate(0deg);
